--- a/src/app/pages/home/components/exclusive-products/exclusive-products.component.scss
+++ b/src/app/pages/home/components/exclusive-products/exclusive-products.component.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/components/titles.scss";
-@use "../../../styles/helpers/colors.scss" as *;
+@use "../../../../../styles/components/titles.scss";
+@use "../../../../../styles/helpers/colors.scss" as *;
 
 .my-pagination::ng-deep .ngx-pagination .current {
   background: $primary !important;
