--- a/src/app/pages/home/components/swiper/swiper.component.scss
+++ b/src/app/pages/home/components/swiper/swiper.component.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/components/btn.scss" as *;
+@use "../../../../../styles/components/btn.scss" as *;
 
 @import "swiper/scss";
 @import "swiper/scss/pagination";
