--- a/src/app/pages/home/components/trending-items/trending-items.component.scss
+++ b/src/app/pages/home/components/trending-items/trending-items.component.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/components/titles.scss";
+@use "../../../../../styles/components/titles.scss";
 
 @import "swiper/scss";
 @import "swiper/scss/navigation";
