--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main class="min-h-screen"><router-outlet></router-outlet></main>
 <app-footer></app-footer>
