--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="product" class="container my-6 mt-24">
-  <div class="flex flex-col gap-8 md:flex-row">
+<div *ngIf="product" class="container flex min-h-screen items-center">
+  <div class="mt-16 flex flex-col gap-8 md:flex-row">
     <div class="images w-full md:w-1/2">
       <div
-        class="thumbnail w-full overflow-hidden border border-gray-200  transition-all duration-75"
+        class="thumbnail w-full overflow-hidden border border-gray-200 transition-all duration-75"
         (mouseover)="onZoom($event, image)"
         (mousemove)="onZoom($event, image)"
         (mouseleave)="offZoom(image)"
@@ -10,7 +10,7 @@
         <img
           #image
           [src]="product.images[currentImageIndex]"
-          class="aspect-square w-full object-contain transition-all duration-75 cursor-zoom-in"
+          class="aspect-square w-full cursor-crosshair object-contain transition-all duration-75"
           alt=""
         />
       </div>
