--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -73,7 +73,8 @@
           ></fa-icon>
         </div>
 
-        <span class="rounded-md bg-gray-500 p-2 text-lg text-white"
+        <span
+          class="rounded-md bg-gray-200 px-2 py-1 text-lg font-semibold text-gray-600"
           >{{ product.stock }} in stock</span
         >
       </div>
