--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -95,7 +95,7 @@
           <span>Total</span>
           <span>{{ total | currency }}</span>
         </p>
-        <button class="btn-fill-primary w-full text-lg">Checkout</button>
+        <a routerLink="/checkout" class="btn-fill-primary w-full text-lg text-center">Checkout</a>
       </div>
     </div>
   </div>
