Edit product details

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="product" class="container flex min-h-screen items-center">
+<div *ngIf="product" class="container py-16 flex min-h-screen items-center">
   <div class="mt-16 flex flex-col gap-8 md:flex-row">
     <div class="images w-full md:w-1/2">
       <div
